# ApiGateway/models/product.go
@@ -1,5 +1,12 @@
 package models
 
+type Product struct {
+	ID       uint    `json:"product_id"`
+	Name     string  `json:"name"`
+	Price    float64 `json:"price"`
+	Category string  `json:"category"`
+}
+
 type CreateProductReq struct {
 	Name     string  `json:"name"`
 	Price    float64 `json:"price"`
